--- a/src/Home/components/ProfilePic/style.css
+++ b/src/Home/components/ProfilePic/style.css
@@ -1,8 +1,9 @@
 .RLFixCenter {
     display: inline !important;
 }
+/*Change height per picture, needs to make this dynamic using jss*/
 .RLOneSize {
-    height: 400px !important;
+    height: 320px !important; 
     width: auto !important;
     object-fit: contain !important;
 }
